# kcolorscheme

./: .gitignore  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  KF5ColorSchemeConfig.cmake.in  metainfo.yaml
autotests/: CMakeLists.txt  kcolorschemetest.colors  kcolorschemetest.cpp
po/ar/: kcolorscheme6.po
po/ast/: kcolorscheme6.po
po/be/: kcolorscheme6.po
po/bg/: kcolorscheme6.po
po/ca/: kcolorscheme6.po
po/ca@valencia/: kcolorscheme6.po
po/cs/: kcolorscheme6.po
po/de/: kcolorscheme6.po
po/en_GB/: kcolorscheme6.po
po/eo/: kcolorscheme6.po
po/es/: kcolorscheme6.po
po/eu/: kcolorscheme6.po
po/fa/: kcolorscheme6.po
po/fi/: kcolorscheme6.po
po/fr/: kcolorscheme6.po
po/ga/: kcolorscheme6.po
po/gl/: kcolorscheme6.po
po/he/: kcolorscheme6.po
po/hi/: kcolorscheme6.po
po/hu/: kcolorscheme6.po
po/ia/: kcolorscheme6.po
po/is/: kcolorscheme6.po
po/it/: kcolorscheme6.po
po/ja/: kcolorscheme6.po
po/ka/: kcolorscheme6.po
po/ko/: kcolorscheme6.po
po/lt/: kcolorscheme6.po
po/lv/: kcolorscheme6.po
po/nan_TW@latin/: kcolorscheme6.po
po/nl/: kcolorscheme6.po
po/nn/: kcolorscheme6.po
po/pa/: kcolorscheme6.po
po/pl/: kcolorscheme6.po
src/: CMakeLists.txt  color-schemes.qrc  kcolorscheme-index.qdoc  kcolorscheme.cpp  kcolorscheme.h  kcolorscheme.qdoc  kcolorscheme.qdocconf  kcolorschemehelpers_p.h  kcolorschememanager.cpp  kcolorschememanager.h  kcolorschememanager_p.h  kcolorschememodel.cpp  kcolorschememodel.h  kstatefulbrush.h
src/qml/: CMakeLists.txt  kquickcolorschemeplugin.cpp  kquickcolorschemeplugin.h
(+15 files in other folders)
